// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should export support constants, types: support 1`] = `
Object {
  "TextInputTypes": Object {
    "date": "date",
    "datetimeLocal": "datetime-local",
    "email": "email",
    "month": "month",
    "number": "number",
    "password": "password",
    "search": "search",
    "tel": "tel",
    "text": "text",
    "time": "time",
    "url": "url",
  },
}
`;

exports[`TextInput Component should handle readOnly, disabled: active 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: disabled 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  disabled=""
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: readOnly 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  readonly=""
  type="text"
  value=""
/>
`;

exports[`TextInput Component should render a basic component: basic component 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-1"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should return a mouseup event on text clear: emulated event, mouseup 1`] = `
Array [
  Array [
    Object {
      "checked": undefined,
      "currentTarget": Object {
        "value": "",
      },
      "id": undefined,
      "keyCode": undefined,
      "name": undefined,
      "persist": [Function],
      "target": Object {},
      "value": "",
    },
  ],
]
`;

exports[`TextInput Component should return an emulated onChange event: emulated event, change 1`] = `
Array [
  Array [
    Object {
      "checked": undefined,
      "currentTarget": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="text"
        value="lorem ipsum"
      />,
      "id": "generatedid-",
      "keyCode": undefined,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="text"
        value="lorem ipsum"
      />,
      "value": "lorem ipsum",
    },
  ],
]
`;

exports[`TextInput Component should return an emulated onClear event on escape with type search: emulated event, esc, type search 1`] = `
Array [
  Array [
    Object {
      "checked": undefined,
      "currentTarget": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-5"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="search"
        value=""
      />,
      "id": "generatedid-",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-5"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="search"
        value=""
      />,
      "value": "",
    },
  ],
]
`;

exports[`TextInput Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
Array [
  Array [
    Object {
      "checked": undefined,
      "currentTarget": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="text"
        value=""
      />,
      "id": "generatedid-",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__text-input "
        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="text"
        value=""
      />,
      "value": "",
    },
  ],
]
`;
